--- a/preloader/package.json
+++ b/preloader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@superflag/super-ipc-preloader",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "A sanely typed convenience wrapper around electron ipc",
   "type": "module",
   "exports": {
@@ -34,7 +34,8 @@
     "electron": "^31.3.0"
   },
   "scripts": {
-    "build:es6": "rm -rf build && tsc",
+    "clean": "rm -rf build",
+    "build:es6": "tsc",
     "build:cjs": "tsc --module commonjs"
   }
 }
