--- a/react/package.json
+++ b/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@superflag/super-ipc-react",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "A sanely typed convenience wrapper around electron ipc",
   "type": "module",
   "exports": {
@@ -33,7 +33,8 @@
     "@total-typescript/tsconfig": "^1.0.4"
   },
   "scripts": {
-    "build:es6": "rm -rf build && tsc",
+    "clean": "rm -rf build",
+    "build:es6": "tsc",
     "build:cjs": "tsc --module commonjs"
   },
   "dependencies": {
