--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -3,7 +3,8 @@
     "module": "commonjs",
 //    "moduleResolution": "bundler",
     "outDir": "${configDir}/build/cjs",
-//    "declaration": false,
+    "declaration": true,
+    "declarationMap": true,
     "sourceMap": true,
     "inlineSourceMap": false
     //    "lib": ["ESNext","ES2022"]
