--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "scripts": {
     "clean": "pnpm run -r clean",
-    "build-types:all": "pnpm run build-types:es6 && pnpm run build-types:cjs",
+    "build-types:all": "pnpm run clean && pnpm run build-types:es6 && pnpm run build-types:cjs && pnpm run build-types:types",
+    "build-types:batch": "pnpm run --filter @superflag/super-ipc-core build && pnpm run -r build",
     "build-types:cjs": "pnpm run --filter @superflag/super-ipc-core build:cjs && pnpm run -r build:cjs",
     "build-types:es6": "pnpm run --filter @superflag/super-ipc-core build:es6 && pnpm run -r build:es6",
-    "pub": "pnpm run clean && pnpm run build-types:all && pnpm publish -r && pnpm run clean"
+    "build-types:types": "pnpm run --filter @superflag/super-ipc-core build:types && pnpm run -r build:types",
+    "pub": "pnpm run build-types:all && pnpm publish -r && pnpm run clean"
   }
 }
