- fix lint errors - add lint scripts

--- a/backend/package.json
+++ b/backend/package.json
@@ -41,7 +41,9 @@
     "clean": "rm -rf build",
     "build:es6": "tsc",
     "build:cjs": "tsc -p tsconfig.cjs.json",
-    "build:types": "tsc -p tsconfig.types.json"
+    "build:types": "tsc -p tsconfig.types.json",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "peerDependencies": {
     "electron": ">24"
