--- a/preloader/package.json
+++ b/preloader/package.json
@@ -40,6 +40,8 @@
     "clean": "rm -rf build",
     "build:es6": "tsc",
     "build:cjs": "tsc -p tsconfig.cjs.json",
-    "build:types": "tsc -p tsconfig.types.json"
+    "build:types": "tsc -p tsconfig.types.json",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   }
 }
