--- a/react/package.json
+++ b/react/package.json
@@ -39,7 +39,9 @@
     "clean": "rm -rf build",
     "build:es6": "tsc",
     "build:cjs": "tsc -p tsconfig.cjs.json",
-    "build:types": "tsc -p tsconfig.types.json"
+    "build:types": "tsc -p tsconfig.types.json",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "react": ">16.8",
